fixing content visibility issues due to navbar being fixed to the top of the screen

--- a/src/App.css
+++ b/src/App.css
@@ -127,7 +127,7 @@ header nav h1 {
 }
 
 .maininfo {
-  padding-top: 20px;
+  padding-top: 70px;
   max-width: 90%;
 }
 
@@ -156,6 +156,7 @@ header nav h1 {
 .card {
   list-style: none;
   padding: 0;
+  margin-top: 90px;
 }
 
 .card li {
